# optimization

./: .gitignore  README.md  pyproject.toml
.fleet/: run.json
anyint/: solver.py
anyint/src/: Cargo.toml
anyint/src/src/: main.rs
coloring/: Cargo.toml  solver.py
coloring/src/: main.rs  parsing.rs  structs.rs
knapsack/: Cargo.toml  solver.py
knapsack/data/: ks_5000_0
knapsack/src/: main.rs  parsing.rs  structs.rs
my_libs/parsing/src/: lib.rs
