[tool.poetry]
name = "optimization"
version = "0.1.0"
description = ""
authors = ["Thomas <1234328+thmsgntz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
scipy = "^1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
